--- a/Assets/css/login.css
+++ b/Assets/css/login.css
@@ -100,7 +100,7 @@ body {
 
 
 .swiper-pagination-bullet {
-  background-color: #009688;
+  background-color: #00635a;
   /* Color de los bullets de paginación */
   width: 12px;
   /* Tamaño de los bullets */
@@ -116,7 +116,7 @@ body {
 
 .branding-section h1 {
   font-size: 2.5rem;
-  color: #009688;
+  color: #00635a;
 }
 
 .branding-section p {
@@ -125,7 +125,7 @@ body {
 }
 
 .highlight {
-  color: #009688;
+  color: #00635a;
   font-weight: bold;
 }
 
@@ -139,7 +139,7 @@ body {
 
 .login-head {
   font-size: 1.5rem;
-  color: #009688;
+  color: #00635a;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -153,13 +153,13 @@ body {
   width: 80%;
   padding: 10px;
   margin-bottom: 60px;
-  border: 1.5px solid #009688;
+  border: 1.5px solid #00635a;
   border-radius: 5px;
 }
 
 .btn-container button {
   width: 80%;
-  background-color: #009688;
+  background-color: #00635a;
   color: #fff;
   border: none;
   padding: 10px;
@@ -180,7 +180,7 @@ body {
 }
 
 .utility a {
-  color: #009688;
+  color: #00635a;
   text-decoration: none;
   margin-left: 25px;
   
@@ -198,7 +198,13 @@ body {
 .iniciar_sesion_olidaste_contrasena {
   margin-left: -210px;
   text-decoration: none;
+  color: #00635a;
  
+}
+a {
+  color: #00635a;
+  text-decoration: none;
+  background-color: transparent;
 }
 
 .login-content .logo {
@@ -489,7 +495,7 @@ body {
 }
 
 .sweet-alert input:focus {
-  border-color: #009688;
+  border-color: #00635a;
   outline: none;
 }
 
@@ -513,7 +519,7 @@ body {
 }
 
 .sweet-alert button {
-  background-color: #009688 !important;
+  background-color: #00635a !important;
   color: white;
   border: none;
   -webkit-box-shadow: none;
